got all data for models.